keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: http01-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: keycloak
  namespace: keycloak
spec:
  rules:
    - host: keycloak.randombits.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8443
  tls:
  - hosts:
    - keycloak.randombits.de
    secretName: keycloak-cert
